# VEHICLE-INSURANCE-PREMIUM

./: LICENSE  README.md  keys.txt  pyproject.toml  requirements.txt  structure.py
src/data_access/: mongodb_uploader.py
src/exception/: __init__.py
src/logger/: __init__.py
